crates/analyzer/tests/snapshots/errors__call_method_in_storage.snap
---
source: crates/analyzer/tests/errors.rs
assertion_line: 323
expression: "error_string(&path, test_files::fixture(path))"
---
error: struct functions can only be called on struct in memory
   ┌─ compile_errors/call_method_in_storage.fe:16:9
   │
16 │         self.bar.get_x()
   │         ^^^^^^^^ ----- hint: copy the struct to memory with `.to_mem()`
   │         │         
   │         this value is in storage


